--- a/spring-boot-mybatis/src/main/resources/application.properties
+++ b/spring-boot-mybatis/src/main/resources/application.properties
@@ -7,7 +7,7 @@ mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 #\u914D\u7F6E\u9879\u76EE\u4E2D\u5B9E\u4F53\u7C7B\u5305\u8DEF\u5F84
 mybatis.type-aliases-package=com.sto.springbootmybatis.model
 
-spring.datasource.url=jdbc:mysql://47.100.21.53:3306/test?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=true
+spring.datasource.url=jdbc:mysql://47.100.21.53:3306/ordertest?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=true
 spring.datasource.username=root
 spring.datasource.password=root123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
