--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,16 @@
     <version>1.0-SNAPSHOT</version>
 
     <modules>
+        <module>banner</module>
         <module>spring-boot-hello</module>
+        <module>spring-boot-jdbc</module>
+        <module>spring-boot-jsp</module>
+        <module>spring-boot-upload</module>
+        <module>spring-boot-web</module>
+        <module>spring-boot-web-restful</module>
+        <module>spring-boot-websocket</module>
+        <module>spring-boot-redis</module>
+        <module>springboot-mybatis</module>
     </modules>
 
     <build>
