批量导入数据测试

--- a/spring-boot-memcache/src/main/resources/application.properties
+++ b/spring-boot-memcache/src/main/resources/application.properties
@@ -1,2 +1,11 @@
 server.port=8081
 
+
+#\u914D\u7F6E Memcached \u7684\u5730\u5740\u548C\u7AEF\u53E3\u53F7\u3001\u8FDE\u63A5\u6C60\u548C\u64CD\u4F5C\u8D85\u65F6\u65F6\u95F4\uFF0C\u4F7F\u7528\u96C6\u7FA4\u65F6\u53EF\u4EE5\u62FC\u63A5\u591A\u4E2A\u5730\u5740\uFF1A"host1:port1 host2:port2 \u2026"\u3002
+# \u5355\u4E2A Memcached \u914D\u7F6E
+#memcached.servers=47.100.21.53:11211
+memcached.servers=127.0.0.1:11211
+# \u8FDE\u63A5\u6C60
+memcached.poolSize=10
+#\u64CD\u4F5C\u8D85\u65F6\u65F6\u95F4
+memcached.opTimeout=6000
