--- a/spring-boot-jpa/src/main/resources/application.properties
+++ b/spring-boot-jpa/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 server.port=8079
+
+spring.datasource.url=jdbc:mysql://47.100.21.53:3306/test?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=true
+spring.datasource.username=root
+spring.datasource.password=root123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+#SQL \u8F93\u51FA
+spring.jpa.show-sql=true
+#format \u4E00\u4E0B SQL \u8FDB\u884C\u8F93\u51FA
+spring.jpa.properties.hibernate.format_sql=true
