--- a/spring-boot-multi-mybatis-anno-druid/src/main/resources/application.properties
+++ b/spring-boot-multi-mybatis-anno-druid/src/main/resources/application.properties
@@ -1,1 +1,34 @@
 server.port=8081
+
+#\u591A\u6570\u636E\u6E90
+# Druid \u6570\u636E\u6E90 1 \u914D\u7F6E
+spring.datasource.druid.one.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.druid.one.url=jdbc:mysql://47.100.21.53:3306/ordertest?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=true
+spring.datasource.druid.one.username=root
+spring.datasource.druid.one.password=root123
+
+spring.datasource.druid.one.initial-size=3
+spring.datasource.druid.one.min-idle=3
+spring.datasource.druid.one.max-active=10
+spring.datasource.druid.one.max-wait=60000
+
+# Druid \u6570\u636E\u6E90 2 \u914D\u7F6E
+spring.datasource.druid.two.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.druid.two.url=jdbc:mysql://47.100.21.53:3306/test?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=true
+spring.datasource.druid.two.username=root
+spring.datasource.druid.two.password=root123
+spring.datasource.druid.two.initial-size=6
+spring.datasource.druid.two.min-idle=6
+spring.datasource.druid.two.max-active=20
+spring.datasource.druid.two.max-wait=120000
+
+#filter \u548C stat \u4F5C\u4E3A Druid \u7684\u516C\u5171\u4FE1\u606F\u914D\u7F6E\uFF0C\u5176\u4ED6\u6570\u636E\u6E90\u7684\u914D\u7F6E\u9700\u8981\u5404\u4E2A\u6570\u636E\u6E90\u5355\u72EC\u914D\u7F6E
+#  StatViewServlet \u914D\u7F6E
+spring.datasource.druid.stat-view-servlet.login-username=admin
+spring.datasource.druid.stat-view-servlet.login-password=admin
+
+# \u914D\u7F6E StatFilter
+spring.datasource.druid.filter.stat.log-slow-sql=true
+spring.datasource.druid.filter.stat.slow-sql-millis=2000
+
+#\u5F3A\u70C8\u6CE8\u610F\uFF1ASpring Boot 2.X \u7248\u672C\u4E0D\u518D\u652F\u6301\u914D\u7F6E\u7EE7\u627F\uFF0C\u591A\u6570\u636E\u6E90\u7684\u8BDD\u6BCF\u4E2A\u6570\u636E\u6E90\u7684\u6240\u6709\u914D\u7F6E\u90FD\u9700\u8981\u5355\u72EC\u914D\u7F6E\uFF0C\u5426\u5219\u914D\u7F6E\u4E0D\u4F1A\u751F\u6548\u3002
