--- a/spring-boot-multi-mybatis-annotation/src/main/resources/application.properties
+++ b/spring-boot-multi-mybatis-annotation/src/main/resources/application.properties
@@ -1,2 +1,12 @@
 server.port=8079
 
+#\u591A\u6570\u636E\u6E90
+spring.datasource.test1.jdbc-url=jdbc:mysql://47.100.21.53:3306/ordertest?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=true
+spring.datasource.test1.username=root
+spring.datasource.test1.password=root123
+spring.datasource.test1.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.datasource.test2.jdbc-url=jdbc:mysql://47.100.21.53:3306/test?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=true
+spring.datasource.test2.username=root
+spring.datasource.test2.password=root123
+spring.datasource.test2.driver-class-name=com.mysql.cj.jdbc.Driver
