--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
         <module>spring-boot-mongodb</module>
         <module>spring-boot-es</module>
         <module>jdk-thread</module>
+        <module>spring-aop</module>
+        <module>spring-shejimoshi</module>
     </modules>
 
     <dependencyManagement>
