--- a/TarsosDSP-jar-demo/pom.xml
+++ b/TarsosDSP-jar-demo/pom.xml
@@ -11,5 +11,30 @@
 
     <artifactId>TarsosDSP-jar-demo</artifactId>
 
+    <dependencies>
+          <dependency>
+          <groupId>ws.schild</groupId>
+          <artifactId>jave-all-deps</artifactId>
+          <version>2.7.3</version>
+      </dependency>
+
+        <!--<dependency>
+            <groupId>ws.schild</groupId>
+            <artifactId>jave-core</artifactId>
+            <version>2.7.3</version>
+        </dependency>
+        <dependency>
+            <groupId>ws.schild</groupId>
+            <artifactId>jave-nativebin-win64</artifactId>
+            <version>2.7.3</version>
+        </dependency>-->
+
+
+        <dependency>
+            <groupId>com.googlecode.soundlibs</groupId>
+            <artifactId>mp3spi</artifactId>
+            <version>1.9.5.4</version>
+        </dependency>
+    </dependencies>
 
 </project>
