--- a/spring-boot-ddd/pom.xml
+++ b/spring-boot-ddd/pom.xml
@@ -4,20 +4,33 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-<!--    <groupId>com.sto</groupId>-->
-    <artifactId>spring-boot-hello</artifactId>
+    <groupId>com.chagee</groupId>
+    <artifactId>spring-boot-ddd</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <name>spring-boot-ddd</name>
 
-    <parent>
-        <artifactId>spring-boot-example</artifactId>
-        <groupId>com.sto</groupId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
+<!--    <parent>-->
+<!--        <groupId>org.springframework.boot</groupId>-->
+<!--        <artifactId>spring-boot-starter-parent</artifactId>-->
+<!--        <version>2.1.4.RELEASE</version>-->
+<!--    </parent>-->
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
     </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>2.2.2.RELEASE</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <dependencies>
         <dependency>
@@ -30,9 +43,17 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.26</version>
+            <scope>compile</scope>
+        </dependency>
+
+
     </dependencies>
 
-    <build>
+  <!--  <build>
     <plugins>
         <plugin>
             <groupId>org.springframework.boot</groupId>
@@ -42,5 +63,5 @@
             </configuration>
         </plugin>
     </plugins>
-    </build>
+    </build>-->
 </project>
